# AutoApply

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  setup.sh
backend/: app.py  app_setup.py  config.py  llm.py  logging.py  main.py  models.py  pdf.py  prompts.py  scraper.py  utils.py
backend/career_documents/: pdf.py  template.html
backend/database/: crud.py  db.py  models.py
backend/llm/: llm.py  prompts.py
backend/llm/prompts/: career_documents.yaml  cover_letter.yaml  cv.yaml  scraping.yaml
backend/prompts/: cv.yaml  scraping.yaml
backend/routes/: deps.py  main.py  pages.py  users.py
backend/schemas/: llm_responses.py
backend/scrapers/: __init__.py  base_scraper.py  linkedin.py  llm_scraper.py  mcp_scraper.py  pracuj_pl.py  utils.py
backend/scrapers/tests/: test_llm_scraper.py
backend/static/: base.css
backend/templates/: account.html  base.html  create_user.html  index.html  login.html  manage_users.html  panel.html  register.html  user_creation.html
docs/: todo.md
