[project]
name = "ai-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "mypy>=1.15.0",
    "openai-agents>=0.0.13",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
    "tiktoken>=0.9.0",
]
