[project]
name = "AutoApply"
version = "0.1.0"
description = "AI Agents that create CV's, cover letter's, and apply for specified jobs. All of that automatically, no more need to do it all by yourself"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "openai-agents>=0.0.13",
    "psycopg>=3.2.6",
    "pydantic>=2.11.3",
    "sqlmodel>=0.0.24",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
