[project]
name = "AutoApply"
version = "0.1.0"
description = "AI agents that create tailored CVs and cover letters, and even apply to jobs for you. Fully automated — no more manual effort"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "openai-agents>=0.0.13",
    "playwright>=1.51.0",
    "playwright-stealth>=2.0.0",
    "psycopg>=3.2.6",
    "pydantic>=2.11.3",
    "sqlmodel>=0.0.24",
    "tiktoken>=0.9.0",
    "weasyprint>=65.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
